# LLM-Context-Trace-Library

./: .gitignore  CHANGELOG.md  CLAUDE.md  LLM-CONTEXT-TRANSFER.md  README.md  debug_pydantic_ai.py  pyproject.toml  task.md
docs/: api.md  api_backup.md
docs/tutorials/: claude-code-tutorial.md  langchain-tutorial.md
lctl/cli/: main.py
lctl/core/: __init__.py  events.py  redaction.py  session.py
lctl/dashboard/: app.py
lctl/dashboard/static/: app.js  styles.css
lctl/dashboard/templates/: index.html
lctl/evaluation/: comparator.py  metrics.py
lctl/integrations/: __init__.py  autogen.py  claude_code.py  crewai.py  dspy.py  langchain.py  llamaindex.py  openai_agents.py  pydantic_ai.py  semantic_kernel.py
lctl/metrics/: __init__.py  aggregators.py  collectors.py  exporters.py
lctl/streaming/: __init__.py  emitter.py  subscriber.py  websocket.py
tests/: test_autogen.py  test_claude_code.py  test_cli.py  test_dashboard.py  test_dspy.py  test_pydantic_ai.py  test_pydantic_ai_comprehensive.py  test_pydantic_ai_llm_trace.py  test_pydantic_ai_stream.py  test_redaction.py  test_security_performance.py  test_semantic_kernel_comprehensive.py  test_sk_stream.py  verify_core_fixes.py
vscode-lctl/: package-lock.json  package.json
vscode-lctl/src/: chainProvider.ts  commands.ts  webviewPanel.ts
