[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lctl"
version = "4.0.0"
description = "Time-travel debugging for multi-agent LLM workflows"
readme = "README.md"
license = "MIT"
authors = [
    { name = "LCTL Contributors" }
]
keywords = [
    "llm",
    "agents",
    "debugging",
    "observability",
    "multi-agent",
    "tracing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "httpx>=0.24",
]
dashboard = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
]
langchain = [
    "langchain>=0.1",
]
crewai = [
    "crewai>=0.1",
]
autogen = [
    "pyautogen>=0.2",
]
all = [
    "lctl[dashboard,langchain,crewai,autogen]",
]

[project.scripts]
lctl = "lctl.cli.main:main"

[project.urls]
Homepage = "https://github.com/kimasplund/LLM-Context-Transfer-Language"
Documentation = "https://github.com/kimasplund/LLM-Context-Transfer-Language#readme"
Repository = "https://github.com/kimasplund/LLM-Context-Transfer-Language"
Issues = "https://github.com/kimasplund/LLM-Context-Transfer-Language/issues"

[tool.hatch.build.targets.wheel]
packages = ["lctl"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=lctl --cov-report=term-missing"
